--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Cards WAR</h1>
+    <h1>BeatYourCard</h1>
     <section class="versus">
         <div id="player1">
             <h2>Player 1 <span></span></h2>
